--- a/WBCCAFE/index.html
+++ b/WBCCAFE/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="ブレンドコーヒーとオーガニックフードを提供するカフェ">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p|Noto+Serif+JP&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="Style.css" rel="stylesheet">
 </head>
 <body>
-    <header class="main-nav">
+    <header class="page-header wrapper">
         <h1><a href="index.html"><img class="logo" src="images/logo.png" alt="カフェホーム"></a></h1>
         <nav>
             <ul class="main-nav">
