--- a/WBCCAFE/index.html
+++ b/WBCCAFE/index.html
@@ -10,17 +10,22 @@
     <link href="Style.css" rel="stylesheet">
 </head>
 <body>
-    <header class="page-header wrapper">
-        <h1><a href="index.html"><img class="logo" src="images/logo.png" alt="カフェホーム"></a></h1>
-        <nav>
-            <ul class="main-nav">
-                <li><a href="news.html">News</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-
-    </header>
-
+    <div id="home" class="big-bg">
+        <header class="page-header wrapper">
+            <h1><a href="index.html"><img class="logo" src="images/logo.png" alt="カフェホーム"></a></h1>
+            <nav>
+                <ul class="main-nav">
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="home-content wrapper">
+            <h2 class="page-title">We'll Make Your Day</h2>
+            <p>オシャレなカフェで癒されてみませんか？</p>
+            <a class="button" href="menu.html">メニューを見る</a>
+        </div>
+    </div>
 </body>
 </html>
