--- a/WBCCAFE/index.html
+++ b/WBCCAFE/index.html
@@ -3,12 +3,12 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
-    <title>WCB Cafe</title>
-    <meta name="description" content="ブレンドコーヒーとオーガニックフードを提供するカフェ">
+    <title>怪しいCafé</title>
+    <meta name="description" content="怪しさを怪しさで包んで提供するカフェ">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p|Noto+Serif+JP&display=swap" rel="stylesheet">
     <link href="Style.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="images/favicon.png"
+    <link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
 <body>
     <div id="home" class="big-bg">
@@ -23,8 +23,8 @@
             </nav>
         </header>
         <div class="home-content wrapper">
-            <h2 class="page-title">We'll Make Your Day</h2>
-            <p>オシャレなカフェで癒されてみませんか？</p>
+            <h2 class="page-title">精神の故郷</h2>
+            <p>心を幻で満たしませんか？</p>
             <a class="button" href="menu.html">メニューを見る</a>
         </div>
     </div>
